
	* tools/.gitignore:
	* tools/Makefile.am:
	* tools/check-headers.sh: New files.

	* src/test/test-include.c:
	Renamed as tools/check-header.c and set it as ignored by git.

	* src/test/.gitignore:
	* src/test/Makefile.am: Updated accordingly.

	* Makefile.am:
	* configure.ac: configure in tools/.

2011-01-14 Pierre Wieser <pwieser@trychlos.org>

	* src/utils/nautilus-actions-new.c:
	* src/utils/nautilus-actions-run.c:
	* src/utils/nautilus-actions-schemas.c: Add locale.h include.

	* src/core/na-boxed.c (boxed_new, na_boxed_copy, na_boxed_new_from_string,
	na_boxed_new_from_string_with_sep, na_boxed_free):
	Add debug messages when allocating/freeing a NABoxed structure.

	* src/nact/nact-icommand-tab.c (on_wdir_browse):
	Remove no more used default value.

	* src/nact/nact-icon-chooser.c
	(fillup_icons_by_path, on_path_selection_changed): Store last folder uri.

	* src/core/na-settings.h: Preference renamed accordingly.

	* README-GCONF:
	* src/core/na-settings.h:
	* src/utils/na-gconf2key.sh.in:
	'-last-folder-uri' preferences are renamed as '-lfu'.

	* src/core/na-settings.c: Set default values.

	* src/nact/nact-gtk-utils.c:
	* src/nact/nact-gtk-utils.h (nact_gtk_utils_select_file,
	nact_gtk_utils_select_file_with_preview, nact_gtk_utils_select_dir):
	Remove no more used default value.

	* src/nact/nact-icommand-tab.c (on_path_browse, on_wdir_browse):
	* src/nact/nact-ienvironment-tab.c (on_try_exec_browse,
	on_show_if_running_browse): Updated accordingly.

	* src/core/na-boxed.c (string_list_from_array, uint_list_from_array):
	Do not allocate the empty last element.

	* src/core/na-io-provider.c (load_items_get_merged_list):
	* src/core/na-iprefs.c (na_iprefs_get_io_providers):
	Use the correct list pointer.

	* src/core/na-iprefs.c:
	* src/core/na-iprefs.h
	(na_iprefs_get_export_format, na_iprefs_set_export_format):
	Functions moved from src/nact/nact-iprefs.c.

	* src/nact/nact-iprefs.c:
	* src/nact/nact-iprefs.h: Removed files.

	* src/nact/Makefile.am: